# object-counter

main/: BasicProcessing.cpp  Blob.h  CMakeLists.txt  COP.cpp  COP.h  Control.cpp  Control.h  DetectorFSM.cpp  DetectorFSM.h  DiscoveryMask.h  DrawPolygonCmd.cpp  DrawPolygonCmd.h  ExclusionMask.h  ImageCounter.cpp  ImageCounter.h  Mask.cpp  Mask.h  Scene.cpp  Scene.h  StateMachine.h  TimeSource.h  areas.conf  command.h  configs.ini  main.cpp  mtrack.h  persistence.h
optflow/: Blob.h  CMakeLists.txt  FilterROI.h  OpticalFlow.h  Scene.h  TimeSource.h  VideoSrc.h  main.cpp  utils.h
