cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(main main.cpp COP.cpp Scene.cpp ImageCounter.cpp DrawPolygonCmd.cpp Mask.cpp BasicProcessing.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

include_directories("../opencv/build/")

include_directories("../opencv/opencv-master/include/")
include_directories("../opencv/opencv-master/modules/core/include/")
include_directories("../opencv/opencv-master/modules/imgproc/include/")
include_directories("../opencv/opencv-master/modules/highgui/include/")
include_directories("../opencv/opencv-master/modules/imgcodecs/include/")
include_directories("../opencv/opencv-master/modules/videoio/include/")
include_directories("../opencv/opencv-master/modules/video/include/")
include_directories("../opencv/opencv-master/modules/features2d/include/")
include_directories("../opencv/opencv-master/modules/text/include/")
include_directories("../opencv/opencv-master/modules/flann/include/")
include_directories("../opencv/opencv-master/modules/calib3d/include/")
include_directories("../opencv/opencv-master/modules/dnn/include/")
include_directories("../opencv/opencv-master/modules/ml/include/")
include_directories("../opencv/opencv-master/modules/objdetect/include/")
include_directories("../opencv/opencv-master/modules/photo/include/")
include_directories("../opencv/opencv-master/modules/stitching/include/")

include_directories("../opencv/opencv_contrib-master/modules/tracking/include/")

target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_core.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_highgui.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_imgcodecs.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_imgproc.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_features2d.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_video.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_videoio.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_text.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_flann.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_tracking.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_calib3d.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_dnn.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_ml.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_objdetect.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_photo.so")
target_link_libraries(${PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../opencv/build/lib/libopencv_stitching.so")

include_directories("../ini/inih-master/")